--- a/analysis/references.bib
+++ b/analysis/references.bib
@@ -643,3 +643,89 @@
         school = {University of Washington},
         url = {https://www.dnr.wa.gov/publications/fp_tfw_land_dam_brea_1991.pdf}
 }
+@article{vanlaningham2006,
+	title = {The effects of rock uplift and rock resistance on river morphology in a subduction zone forearc, Oregon, USA},
+	author = {VanLaningham, Sam and Meigs, Andrew and Goldfinger, Chris},
+	year = {2006},
+	date = {2006},
+	journal = {Earth Surface Processes and Landforms},
+	pages = {1257--1279},
+	volume = {31},
+	number = {10},
+	doi = {10.1002/esp.1326},
+	url = {http://dx.doi.org/10.1002/esp.1326},
+	langid = {en}
+}
+
+@article{marshall2014,
+	title = {Diagenetic variation in the Oregon Coast Range: Implications for rock strength, soil production, hillslope form, and landscape evolution},
+	author = {Marshall, Jill A. and Roering, Joshua J.},
+	year = {2014},
+	month = {06},
+	date = {2014-06},
+	journal = {Journal of Geophysical Research: Earth Surface},
+	pages = {1395--1417},
+	volume = {119},
+	number = {6},
+	doi = {10.1002/2013jf003004},
+	url = {http://dx.doi.org/10.1002/2013JF003004},
+	langid = {en}
+}
+
+@article{michelini2017,
+	title = {Field investigations of the interaction between debris flows and forest vegetation in two Alpine fans},
+	author = {Michelini, Tamara and Bettella, Francesco and {D'Agostino}, Vincenzo},
+	year = {2017},
+	month = {02},
+	date = {2017-02},
+	journal = {Geomorphology},
+	pages = {150--164},
+	volume = {279},
+	doi = {10.1016/j.geomorph.2016.09.029},
+	url = {http://dx.doi.org/10.1016/j.geomorph.2016.09.029},
+	langid = {en}
+}
+
+@article{ishikawa2003,
+	title = {Suppression of debris movement by forests and damage to forests by debris deposition},
+	author = {Ishikawa, Yoshiharu and Kawakami, Sunao and Morimoto, Chiyo and Mizuhara, Kunio},
+	year = {2003},
+	month = {02},
+	date = {2003-02},
+	journal = {Journal of Forest Research},
+	pages = {37--47},
+	volume = {8},
+	number = {1},
+	doi = {10.1007/s103100300004},
+	url = {http://dx.doi.org/10.1007/s103100300004},
+	langid = {en}
+}
+
+@article{bettella2018,
+	title = {The ability of tree stems to intercept debris flows in forested fan areas: A laboratory modelling study},
+	author = {Bettella, Francesco and Michelini, Tamara and {D'Agostino}, Vincenzo and Bischetti, Gian Battista},
+	year = {2018},
+	month = {04},
+	date = {2018-04-05},
+	journal = {Journal of Agricultural Engineering},
+	pages = {42--51},
+	volume = {49},
+	number = {1},
+	doi = {10.4081/jae.2018.712},
+	url = {http://dx.doi.org/10.4081/jae.2018.712}
+}
+
+@article{tsunetaka2022,
+	title = {Do standing trees affect landslide mobility on forested hillslopes in Japan?},
+	author = {Tsunetaka, Haruka and Asano, Shiho and Murakami, Wataru},
+	year = {2022},
+	month = {08},
+	date = {2022-08-27},
+	journal = {Earth Surface Processes and Landforms},
+	pages = {3332--3347},
+	volume = {47},
+	number = {14},
+	doi = {10.1002/esp.5461},
+	url = {http://dx.doi.org/10.1002/esp.5461},
+	langid = {en}
+}
